--- a/SudokuSolver/SudokuSolver.csproj
+++ b/SudokuSolver/SudokuSolver.csproj
@@ -46,6 +46,7 @@
     <Compile Include="Data\SudokuMap.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Strategies\ISudokuStrategy.cs" />
     <Compile Include="Workers\SudokuBoardDisplayer.cs" />
     <Compile Include="Workers\SudokuBoardStateManager.cs" />
     <Compile Include="Workers\SudokuFileReader.cs" />
